# jlib

./: LICENCE.md  README.md  jlib.bat  jlib.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
src/: jlib.bat  jlib.py  run.bat  update.bat
